A problem with import of course requests fixed (courses were not imported for new students).